# kmean-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: lloyd.rs  minibatch.rs  simple.rs  status_events.rs
src/: abort_strategy.rs  api.rs  helpers.rs  kmeans_impl.rs  lib.rs  memory.rs
src/distances/: euclidean.rs  euclideandistance.rs  histogram.rs  histogramdistance.rs  mod.rs
src/inits/: kmeanplusplus.rs  mod.rs  precomputed.rs  randompartition.rs  randomsample.rs
src/variants/: lloyd.rs  minibatch.rs  mod.rs
