[package]
name = "kmeans"
version = "2.0.0"
authors = ["Markus Ebner <hiwatari.seiji@gmail.com>"]
edition = "2021"
description = "Small and fast library for k-means clustering calculations."
repository = "https://github.com/seijikun/kmean-rs"
readme = "README.md"
license = "Apache-2.0"
keywords = ["kmeans", "k-means", "means", "cluster", "clustering"]
categories = ["algorithms", "science"]
exclude = ["examples/*"]

[dependencies]
rayon = "1.10.0"
rand = "0.8.5"
num = "0.4.3"
num-traits = "0.2.19"
aligned-vec = "0.6"

[lib]
name = "kmeans"
path = "src/lib.rs"

[[example]]
name = "lloyd"
path = "examples/lloyd.rs"

[[example]]
name = "minibatch"
path = "examples/minibatch.rs"

[[example]]
name = "status_events"
path = "examples/status_events.rs"


[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
incremental = false
